[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/OldScenes/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Characters/Players/Knight.png" type="Texture" id=2]
[ext_resource path="res://Assets/Weapons/OldKnife.png" type="Texture" id=3]




[sub_resource type="CapsuleShape2D" id=5]
radius = 9.0
height = 8.0

[sub_resource type="Animation" id=2]
resource_name = "Hit"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.560784, 0, 0, 1 ), Color( 0.733333, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.389647, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk"
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.39 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 315.0, 235.0 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.39, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 45.0, 135.0, 45.0 ]
}

[sub_resource type="Animation" id=8]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=9]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 20171.1, 49667 ),
"update": 0,
"values": [ Vector2( 16, 25 ), Vector2( 16, 26 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 34.2967, 724.077 ),
"update": 0,
"values": [ Vector2( 16, 22 ), Vector2( 16, 24 ) ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 9, 18 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 9, 22 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Walk = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 16, 32 )
current = true
zoom = Vector2( 0.7, 0.7 )
drag_margin_h_enabled = false
drag_margin_v_enabled = false

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.13333, 1.25926 )
texture = ExtResource( 2 )
centered = false
hframes = 9
frame = 8

[node name="Weapon" type="Sprite" parent="."]
position = Vector2( 16, 26 )
rotation = 0.785398
texture = ExtResource( 3 )

[node name="AnimationPlayerWeapon" type="AnimationPlayer" parent="."]
anims/AttackL = SubResource( 6 )
anims/AttackR = SubResource( 7 )
anims/Hit = SubResource( 8 )
anims/Idle = SubResource( 9 )
anims/Walk = SubResource( 10 )

[node name="RightColl" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightColl"]
position = Vector2( 19, 21 )
shape = SubResource( 11 )

[node name="LeftColl" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftColl"]
position = Vector2( 1, 21 )
shape = SubResource( 11 )
